--- a/springMVC-demo3/src/main/webapp/WEB-INF/templates/index.html
+++ b/springMVC-demo3/src/main/webapp/WEB-INF/templates/index.html
@@ -14,6 +14,11 @@
 <a th:href="@{/testModel}">通过testModel向request域对象共享数据</a><br>
 <a th:href="@{/testMap}">通过testMap向request域对象共享数据</a><br>
 <a th:href="@{/testModelMap}">通过testmodelMap向request域对象共享数据</a><br>
+<a th:href="@{/testSession}">通过testSession向request域对象共享数据</a><br>
+<a th:href="@{/testApplication}">通过testApplication向request域对象共享数据</a><br>
+<p></p>
+<a th:href="@{/test_view}">跳转 test_view</a><br>
+<a th:href="@{/test_rest}">跳转 test_rest</a><br>
 
 </body>
 </html>
