--- a/springMVC-annotation/src/main/webapp/WEB-INF/templates/index.html
+++ b/springMVC-annotation/src/main/webapp/WEB-INF/templates/index.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
-
+annotation  index
 </body>
 </html>
