--- a/springMVC-demo4/src/main/webapp/WEB-INF/templates/success.html
+++ b/springMVC-demo4/src/main/webapp/WEB-INF/templates/success.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
-
+原来的success
 </body>
 </html>
