--- a/springMVC-demo5/src/main/webapp/WEB-INF/templates/error.html
+++ b/springMVC-demo5/src/main/webapp/WEB-INF/templates/error.html
@@ -5,10 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
-
+出现错误
+<p th:text="${ex}"></p>
 </body>
 </html>
