--- a/springMVC-demo5/src/main/webapp/WEB-INF/templates/hello2.html
+++ b/springMVC-demo5/src/main/webapp/WEB-INF/templates/hello2.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
-
+<h1>halo2</h1>
 </body>
 </html>
