--- a/springMVC-demo5/src/main/webapp/WEB-INF/templates/index.html
+++ b/springMVC-demo5/src/main/webapp/WEB-INF/templates/index.html
@@ -5,10 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
+    <h1>首页</h1>
 
+
+<a th:href="@{/testInterceptor}"></a>
 </body>
 </html>
