--- a/springMVC-rest/src/main/webapp/WEB-INF/templates/error.html
+++ b/springMVC-rest/src/main/webapp/WEB-INF/templates/error.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-success<br>
-<p th:text="${testRequestScope}"></p>
-<p th:text="${session.testSessionScope}"></p>
-<p th:text="${application.testApplicationScope}"></p>
-
+出现错误
 </body>
 </html>
